Fixed overflow issues on larger screens, changed SVG size in endHomeSection

--- a/client/src/src/stylesheets/EndHomeSection.module.css
+++ b/client/src/src/stylesheets/EndHomeSection.module.css
@@ -2,7 +2,7 @@
     display:flex; 
     flex-direction: row;
     min-height:63vh; 
-    width:100%; 
+    max-width:100vw; 
     align-items: center;
     justify-content: center;
     background:url(./wave.svg) no-repeat;
@@ -18,7 +18,12 @@
     align-items: center;
     justify-content: flex-end;
 }
-
+@media(min-width:19255px){
+    .visualSection svg{
+        width:50%;
+        height:50%;
+    }
+}
 .panel .infoSection{
     height:100%;
     width:50%;
