--- a/client/src/src/stylesheets/cardSection.module.css
+++ b/client/src/src/stylesheets/cardSection.module.css
@@ -1,6 +1,6 @@
 .cardHolder{
     display:flex;
-    width:100vw; 
+    max-width:100vw; 
     background-color: white;
     justify-content: center;
     align-items: center;
