--- a/client/src/src/stylesheets/navbar2.module.css
+++ b/client/src/src/stylesheets/navbar2.module.css
@@ -1,6 +1,4 @@
 nav {
-    width:100vw;
-    min-width: 100vw;
     max-width: 100vw;
     overflow-x:hidden;
     height: 80px;
